# india-rank

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  app.py  generate_deck.py  india_runs_sandbox.ipynb  pyproject.toml  rank.py  requirements-dev.txt  requirements.txt  sample_candidates.jsonl  setup.py  submission.csv  submission_metadata.yaml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
config/: default.yaml
data/candidates/: aditya_menon.json  amit_kumar.json  karan_malhotra.json  kavita_joshi.json  manoj_tiwari.json  neha_gupta.json  pooja_iyer.json  priya_sharma.json  rahul_verma.json  ravi_shankar.json  rohit_joshi.json  siddharth_chopra.json  sneha_reddy.json  tara_krishnan.json  vikram_singh.json
data/job_descriptions/: devops__platform_engineer.json  machine_learning_engineer__nlp_&_llms.json
docker/: Dockerfile  Dockerfile.api  docker-compose.yml
src/candidate_ranker/: __init__.py  __main__.py  api.py  cli.py  config.py  embedding.py  exporter.py  jd_features.py  jd_scoring.py  loader.py  models.py  pipeline.py  redrob_models.py  semantic.py  skills.py
src/candidate_ranker/io/: __init__.py  export.py  generator.py
src/candidate_ranker/scoring/: __init__.py  behavioral.py  experience.py  semantic.py  skills.py  title.py
src/data/candidates/: ananya_patel.json  arjun_mehta.json  deepika_nair.json  isha_agarwal.json  meera_desai.json
src/data/job_descriptions/: senior_data_scientist__recommendation_systems.json  senior_software_engineer__distributed_systems.json
tests/: test_config.py  test_embedding.py  test_pipeline.py  test_scorer.py  test_skills.py
